# VanillaHelpers

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
src/: Allocator.cpp  Allocator.h  Blips.cpp  Blips.h  Common.cpp  Common.h  DllMain.cpp  FileIO.cpp  FileIO.h  Game.cpp  Game.h  Morph.cpp  Morph.h  MountSwap.cpp  MountSwap.h  MtxFilter.cpp  MtxFilter.h  Offsets.h  Texture.cpp  Texture.h
src/unused/: GameUnused.cpp  GameUnused.h  OffsetsUnused.h
